# contextvc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/repeatbench/: README.md
benchmarks/repeatbench/fixtures/npm-service/: package.json
benchmarks/repeatbench/fixtures/npm-service/.context/objects/constraints/: use-pnpm.md
benchmarks/repeatbench/results/: latest-summary.json  latest.json
benchmarks/repeatbench/scenarios/: npm-install-repeat.yaml
docs/: architecture.mmd  design.md  ocl-v0.md
docs/schema/: ocl-object-v0.schema.json
src/: adopt.rs  backfill.rs  check.rs  config.rs  distill.rs  doctor.rs  event.rs  gate.rs  harvest.rs  hooks.rs  index.rs  init.rs  lib.rs  lockfile.rs  main.rs  matchers.rs  mcp.rs  object.rs  paths.rs  redact.rs  render.rs  repeatbench.rs  review.rs  status.rs  verify.rs  version.rs
src/compiler/: agents_md.rs  claude_md.rs  cline_memory_bank.rs  copilot_instructions.rs  cursor_mdc.rs  gemini_md.rs  managed.rs  mod.rs
tests/: integration.rs
tests/fixtures/golden-path/: AGENTS.md
tests/fixtures/golden-path/.cursor/rules/: api.mdc  ui.mdc
