[package]
name = "ctx"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Git-native context control plane for AI coding agents"
license = "Apache-2.0"
repository = "https://github.com/HaochengLu/contextvc"

[[bin]]
name = "ctx"
path = "src/main.rs"

[lib]
name = "ctx"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
glob = "0.3"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
ulid = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
